[project]
name = "name"
version = "0.1.0"
description = "description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[dependency-groups]
dev = [
    "commitizen>=4.8.3",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[tool.commitizen]
bump_message = "bump: v$current_version → v$new_version"
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
task-tags = ["TODO"]
select = ["E", "F", "I", "B", "A", "COM", "PT", "ARG", "PTH", "C901", "TID251", "TID252"]
ignore = ["COM812", "ARG002"] # COM812: ruff already handle this rull

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 100
